--- a/OnovaStore/Views/Shared/_Cart.cshtml
+++ b/OnovaStore/Views/Shared/_Cart.cshtml
@@ -1,4 +1,12 @@
-﻿<div class="u-basket d-inline-block g-z-index-3">
+﻿@using System.Net
+@using System.Net.Http
+@using Newtonsoft.Json
+@using OnovaStore.Models.Brand
+@inject IRestClient restClient
+@inject Microsoft.AspNetCore.Http.IHttpContextAccessor httpContextAccessor
+@inject System.Security.Claims.IClaimPrincipalManager claimManager
+
+<div class="u-basket d-inline-block g-z-index-3">
     <div class="g-py-10 g-px-6">
         <a href="#!" id="basket-bar-invoker" class="u-icon-v1 g-color-black g-color-primary--hover g-font-size-17 g-text-underline--none--hover"
            aria-controls="basket-bar"
@@ -10,16 +18,102 @@
            data-dropdown-hide-on-scroll="false"
            data-dropdown-animation-in="fadeIn"
            data-dropdown-animation-out="fadeOut">
-            <span class="u-badge-v1--sm g-color-white g-bg-primary g-font-size-11 g-line-height-1_4 g-rounded-50x g-pa-4" id="numberQuantity" style="top: 6px !important; right: 4px !important;"></span>
+            <span class="u-badge-v1--sm g-color-white g-bg-primary g-font-size-11 g-line-height-1_4 g-rounded-50x g-pa-4" id="numberQuantity" style="top: 6px !important; right: 4px !important;">0</span>
             <i class="icon-hotel-restaurant-105 u-line-icon-pro"></i>
         </a>
     </div>
+
     <div id="basket-bar" class="u-basket__bar u-dropdown--css-animation u-dropdown--hidden g-text-transform-none g-bg-white g-brd-around g-brd-gray-light-v4"
          aria-labelledby="basket-bar-invoker">
         <div class="g-brd-bottom g-brd-gray-light-v4 g-pa-15 g-mb-10">
             <span class="d-block h6 text-center text-uppercase mb-0">Shopping Cart</span>
         </div>
         
+        @*fix displaying*@
+        <div class="js-scrollbar g-height-200 mCustomScrollbar _mCS_1 mCS-autoHide" style="position: relative; overflow: visible;">
+            <div id="mCSB_1" class="mCustomScrollBox mCS-minimal-dark mCSB_vertical mCSB_outside" style="max-height: none;" tabindex="0">
+                <div id="mCSB_1_container" class="mCSB_container" style="position: relative; top: -188px; left: 0px;" dir="ltr">
+                    <!-- Product -->
+                    <div class="u-basket__product g-brd-none g-px-20">
+                        <div class="row no-gutters g-pb-5">
+                            <div class="col-4 pr-3">
+                                <a class="u-basket__product-img" href="#!">
+                                    <img class="img-fluid mCS_img_loaded" src="../assets/img-temp/150x150/img1.jpg" alt="Image Description">
+                                </a>
+                            </div>
+
+                            <div class="col-8">
+                                <h6 class="g-font-weight-400 g-font-size-default">
+                                    <a class="g-color-black g-color-primary--hover g-text-underline--none--hover" href="#!">Black Glasses</a>
+                                </h6>
+                                <small class="g-color-primary g-font-size-12">1 x $22.00</small>
+                            </div>
+                        </div>
+                        <button type="button" class="u-basket__product-remove">×</button>
+                    </div>
+                    <!-- End Product -->
+                    <!-- Product -->
+                    <div class="u-basket__product g-brd-none g-px-20">
+                        <div class="row no-gutters g-pb-5">
+                            <div class="col-4 pr-3">
+                                <a class="u-basket__product-img" href="#!">
+                                    <img class="img-fluid mCS_img_loaded" src="../assets/img-temp/150x150/img2.jpg" alt="Image Description">
+                                </a>
+                            </div>
+
+                            <div class="col-8">
+                                <h6 class="g-font-weight-400 g-font-size-default">
+                                    <a class="g-color-black g-color-primary--hover g-text-underline--none--hover" href="#!">Gloves</a>
+                                </h6>
+                                <small class="g-color-primary g-font-size-12">2 x $55.00</small>
+                            </div>
+                        </div>
+                        <button type="button" class="u-basket__product-remove">×</button>
+                    </div>
+                    <!-- End Product -->
+                    <!-- Product -->
+                    <div class="u-basket__product g-brd-none g-px-20">
+                        <div class="row no-gutters g-pb-5">
+                            <div class="col-4 pr-3">
+                                <a class="u-basket__product-img" href="#!">
+                                    <img class="img-fluid mCS_img_loaded" src="../assets/img-temp/150x150/img3.jpg" alt="Image Description">
+                                </a>
+                            </div>
+
+                            <div class="col-8">
+                                <h6 class="g-font-weight-400 g-font-size-default">
+                                    <a class="g-color-black g-color-primary--hover g-text-underline--none--hover" href="#!">Chukka Shoes</a>
+                                </h6>
+                                <small class="g-color-primary g-font-size-12">1 x $199.00</small>
+                            </div>
+                        </div>
+                        <button type="button" class="u-basket__product-remove">×</button>
+                    </div>
+                    <!-- End Product -->
+                    <!-- Product -->
+                    <div class="u-basket__product g-brd-none g-px-20">
+                        <div class="row no-gutters g-pb-5">
+                            <div class="col-4 pr-3">
+                                <a class="u-basket__product-img" href="#!">
+                                    <img class="img-fluid mCS_img_loaded" src="../assets/img-temp/150x150/img4.jpg" alt="Image Description">
+                                </a>
+                            </div>
+
+                            <div class="col-8">
+                                <h6 class="g-font-weight-400 g-font-size-default">
+                                    <a class="g-color-black g-color-primary--hover g-text-underline--none--hover" href="#!">Desk Clock</a>
+                                </h6>
+                                <small class="g-color-primary g-font-size-12">1 x $12.00</small>
+                            </div>
+                        </div>
+                        <button type="button" class="u-basket__product-remove">×</button>
+                    </div>
+                    <!-- End Product -->
+                </div>
+            </div><div id="mCSB_1_scrollbar_vertical" class="mCSB_scrollTools mCSB_1_scrollbar mCS-minimal-dark mCSB_scrollTools_vertical" style="display: block;"><div class="mCSB_draggerContainer"><div id="mCSB_1_dragger_vertical" class="mCSB_dragger" style="position: absolute; min-height: 50px; display: block; height: 91px; max-height: 166px; top: 85px;"><div class="mCSB_dragger_bar" style="line-height: 50px;"></div></div><div class="mCSB_draggerRail"></div></div></div>
+        </div>
+        
+
         <div class="clearfix g-px-15">
             <div class="row align-items-center text-center g-brd-y g-brd-gray-light-v4 g-font-size-default">
                 <div class="col g-brd-right g-brd-gray-light-v4">
@@ -30,6 +124,7 @@
                 </div>
             </div>
         </div>
+
         <div class="g-pa-20">
             <div class="text-center g-mb-15">
                 <a class="text-uppercase g-color-primary g-color-main--hover g-font-weight-400 g-font-size-13 g-text-underline--none--hover" href="page-checkout-1.html">
@@ -37,7 +132,80 @@
                     <i class="ml-2 icon-finance-100 u-line-icon-pro"></i>
                 </a>
             </div>
-            <a class="btn btn-block u-btn-black g-brd-primary--hover g-bg-primary--hover g-font-size-12 text-uppercase rounded g-py-10" href="page-checkout-1.html">Proceed to Checkout</a>
         </div>
     </div>
 </div>
+
+@{
+    var customerId = "";
+
+    if (claimManager.IsAuthenticated)
+    {
+        customerId = claimManager.Id;
+    }
+    else
+    {
+        if (httpContextAccessor.HttpContext.Request.Cookies["AnonymousId"] != null)
+        {
+            customerId = httpContextAccessor.HttpContext.Request.Cookies["AnonymousId"];
+        }
+    }
+    using (var client = restClient.CreateClient(User))
+    {
+        using (var response = await client.GetAsync("/api/cart/ShowCartHeader?customerId=" + customerId))
+        {
+            dynamic result = response.StatusCode == HttpStatusCode.OK
+                ? await response.Content.ReadAsStringAsync()
+                : null;
+
+            if (result != null)
+            {
+                <input type="hidden" id="listItem" value="@result" />
+            }
+        }
+    }
+}
+
+
+
+<script type="text/javascript">
+    var imgUrl = 'http://res.cloudinary.com/vinhloc1996/image/upload/';
+    if (document.getElementById("listItem")) {
+        var list = JSON.parse(document.getElementById("listItem").value);
+        var totalPrice = 0;
+
+        if (list != null) {
+            $('div').remove('.cart-detail');
+
+            for (var i = 0; i < list.length; i++) {
+                if (list[i].productThumbImage == null) {
+                    list[i].productThumbImage = 'b5aamndnqugqynwxzmm6';
+                }
+
+                var element =
+                    '<div class="js-scrollbar g-height-200 cart-detail"> <div class="u-basket__product g-brd-none g-px-20"> <div class="row no-gutters g-pb-5"> <div class="col-4 pr-3"> <a class="u-basket__product-img" href="#!"> <img class="img-fluid" src="' +
+                    imgUrl +
+                    list[i].productThumbImage +
+                    '" alt="Image Description"> </a> </div> <div class="col-8"> <h6 class="g-font-weight-400 g-font-size-default"> <a class="g-color-black g-color-primary--hover g-text-underline--none--hover" href="' +
+                    list[i].slug +
+                    '">' +
+                    list[i].name +
+                    '</a> </h6> <small class="g-color-primary g-font-size-12">' +
+                    list[i].quantity +
+                    ' x $' +
+                    list[i].displayPrice +
+                    '</small> </div> </div> <button type="button" class="u-basket__product-remove">&times;</button> </div> </div>';
+
+                $(element).insertAfter('.g-brd-bottom.g-brd-gray-light-v4.g-pa-15.g-mb-10');
+                totalPrice += (list[i].quantity * list[i].displayPrice);
+            }
+
+
+            $('#totalPrice').text('$' + totalPrice);
+
+
+            $("#numberQuantity").text(list.length);
+        }
+    }
+
+</script>
