--- a/OnovaStore/Views/Shared/_Layout.cshtml
+++ b/OnovaStore/Views/Shared/_Layout.cshtml
@@ -27,6 +27,7 @@
     <link rel="stylesheet" href="~/html/assets/css/styles.e-commerce.css">
     <!-- CSS Customization -->
     <link rel="stylesheet" href="~/html/assets/css/custom.css">
+    <script src="~/html/assets/vendor/jquery/jquery.min.js"></script>
 </head>
 <body>
     <main>
